Agregando Registro de cobros

--- a/Hudelsis_P2_AP2/Hudelsis_P2_AP2.csproj
+++ b/Hudelsis_P2_AP2/Hudelsis_P2_AP2.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\Consultas\C_Cobros.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Data\" />
   </ItemGroup>
 
@@ -16,6 +20,18 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Consultas\C_Cobros.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Consultas\C_Cobros.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Consultas\C_Cobros.razor" />
   </ItemGroup>
 
 </Project>
